unpackaged/main/default/objects/Case/fields/ACG_Sub_category__c.field-meta.xml
<CustomField>
    <fullName>ACG_Sub_category__c</fullName>
    <description>Dependent field off of Category</description>
    <label>Sub-category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC Machine</fullName>
            </value>
            <value>
                <fullName>Add AR Account Request</fullName>
            </value>
            <value>
                <fullName>Add Employee</fullName>
            </value>
            <value>
                <fullName>Add Part</fullName>
            </value>
            <value>
                <fullName>Alignment Rack</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>Awning</fullName>
            </value>
            <value>
                <fullName>Brake Lathe</fullName>
            </value>
            <value>
                <fullName>CC Device</fullName>
            </value>
            <value>
                <fullName>Citrix/ROW</fullName>
            </value>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Convert to Est</fullName>
            </value>
            <value>
                <fullName>Core Issue</fullName>
            </value>
            <value>
                <fullName>Coupon Issue</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer/Vehicle Issue</fullName>
            </value>
            <value>
                <fullName>Data Corruption</fullName>
            </value>
            <value>
                <fullName>Deactivate Smart Job</fullName>
            </value>
            <value>
                <fullName>Duplicate Record</fullName>
            </value>
            <value>
                <fullName>Electrical/Lighting</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Exhaust System</fullName>
            </value>
            <value>
                <fullName>Exterior Doors</fullName>
            </value>
            <value>
                <fullName>Fleet Add</fullName>
            </value>
            <value>
                <fullName>Fleet Help Request</fullName>
            </value>
            <value>
                <fullName>Fleet Update</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpet</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>