unpackaged/main/default/objects/Case/fields/ACG_Sub_Service_Required__c.field-meta.xml
<CustomField>
    <fullName>ACG_Sub_Service_Required__c</fullName>
    <label>Sub-Service Required</label>
    <length>30</length>
    <type>Text</type>
</CustomField>