unpackaged/main/default/objects/Case/fields/ACG_Technician_Hours__c.field-meta.xml
<CustomField>
    <fullName>ACG_Technician_Hours__c</fullName>
    <inlineHelpText>Please record the hours spent on-site or working with property contacts to resolve this issue. E.g., for 30 mins, list 0.5.</inlineHelpText>
    <label>Technician Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>