unpackaged/main/default/objects/Case/fields/ACG_Time_Difference_from_Last_Call__c.field-meta.xml
<CustomField>
    <fullName>ACG_Time_Difference_from_Last_Call__c</fullName>
    <formula>NOW() - ACG_Last_Call_Activity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Difference from Last Call</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>