unpackaged/main/default/objects/Case/fields/ACG_Total_Calls_Duration__c.field-meta.xml
<CustomField>
    <fullName>ACG_Total_Calls_Duration__c</fullName>
    <label>Total Calls Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>