unpackaged/main/default/objects/Case/fields/ACG_Total_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>ACG_Total_of_Calls__c</fullName>
    <label>Total # of Calls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>