unpackaged/main/default/objects/Case/fields/ACG_Tow_Codes__c.field-meta.xml
<CustomField>
    <fullName>ACG_Tow_Codes__c</fullName>
    <description>Created for FSL ERS Work Order Intake</description>
    <label>Tow Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>0:GOA</fullName>
            </value>
            <value>
                <fullName>1:Flat Tire w/Space</fullName>
            </value>
            <value>
                <fullName>1R:Flat Tire, RV</fullName>
            </value>
            <value>
                <fullName>2:Flat Tire w/o Spare</fullName>
            </value>
            <value>
                <fullName>2R:RV No Spare</fullName>
            </value>
            <value>
                <fullName>3:Battery Boost</fullName>
            </value>
            <value>
                <fullName>3B:Battery Service</fullName>
            </value>
            <value>
                <fullName>3R:RV Battery Service</fullName>
            </value>
            <value>
                <fullName>4:Cant start/Pass Tow</fullName>
            </value>
            <value>
                <fullName>5:Fuel Delivery</fullName>
            </value>
            <value>
                <fullName>6:Tow</fullName>
            </value>
            <value>
                <fullName>6F:Tow w/Flatbed</fullName>
            </value>
            <value>
                <fullName>6P:Premier Tow 200</fullName>
            </value>
            <value>
                <fullName>6R:RV Service</fullName>
            </value>
            <value>
                <fullName>7:Basic Lockout</fullName>
            </value>
            <value>
                <fullName>7A:Make a key</fullName>
            </value>
            <value>
                <fullName>7B:Locksmith Srvs</fullName>
            </value>
            <value>
                <fullName>7H:Home Locksmith Svcs</fullName>
            </value>
            <value>
                <fullName>8:Extric/Winch</fullName>
            </value>
            <value>
                <fullName>9:Misc/Police</fullName>
            </value>
            <value>
                <fullName>R:Premier Rental Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>