unpackaged/main/default/objects/Case/fields/ACG_Tow_Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>ACG_Tow_Destination_Address__c</fullName>
    <label>Tow Destination Address</label>
    <type>TextArea</type>
</CustomField>