unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Comments__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Comments__c</fullName>
    <label>Vehicle Comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>