unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Description_Other__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Description_Other__c</fullName>
    <inlineHelpText>Populate this field if you cannot find the Vehicle using the lookup above.</inlineHelpText>
    <label>Vehicle Description Other</label>
    <type>TextArea</type>
</CustomField>