unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Location_Address__c</fullName>
    <label>Vehicle Location Address</label>
    <type>TextArea</type>
</CustomField>