unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Location_Type__c</fullName>
    <label>Vehicle Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alley</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
            <value>
                <fullName>Ditch</fullName>
            </value>
            <value>
                <fullName>Driveway</fullName>
            </value>
            <value>
                <fullName>Front Parking Lot</fullName>
            </value>
            <value>
                <fullName>Highway</fullName>
            </value>
            <value>
                <fullName>Low Clearance Garage</fullName>
            </value>
            <value>
                <fullName>Median</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
            <value>
                <fullName>Parking Structure</fullName>
            </value>
            <value>
                <fullName>Rear Driveway</fullName>
            </value>
            <value>
                <fullName>Rear Parking Lot</fullName>
            </value>
            <value>
                <fullName>Residential Garage</fullName>
            </value>
            <value>
                <fullName>Road Shoulder</fullName>
            </value>
            <value>
                <fullName>Street</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>