unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Longitude__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Longitude__c</fullName>
    <label>Vehicle Longitude</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>