unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Plate_State__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Plate_State__c</fullName>
    <label>Vehicle State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>