unpackaged/main/default/objects/Case/fields/ACG_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>