unpackaged/main/default/objects/Case/fields/ACG_VIN__c.field-meta.xml
<CustomField>
    <fullName>ACG_VIN__c</fullName>
    <label>VIN</label>
    <length>17</length>
    <type>Text</type>
</CustomField>