unpackaged/main/default/objects/Case/fields/ACG_Warranty_Cost__c.field-meta.xml
<CustomField>
    <fullName>ACG_Warranty_Cost__c</fullName>
    <label>Warranty Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>