unpackaged/main/default/objects/Case/fields/ACG_Warranty_Information__c.field-meta.xml
<CustomField>
    <fullName>ACG_Warranty_Information__c</fullName>
    <label>Warranty Information</label>
    <type>TextArea</type>
</CustomField>