unpackaged/main/default/objects/Case/fields/ACG_Was_this_an_injury_incident__c.field-meta.xml
<CustomField>
    <fullName>ACG_Was_this_an_injury_incident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was this an injury incident?</label>
    <type>Checkbox</type>
</CustomField>