unpackaged/main/default/objects/Case/fields/ACG_Year__c.field-meta.xml
<CustomField>
    <fullName>ACG_Year__c</fullName>
    <description>Vehicle manufacturing year. Populated via Car Care Appointment Page</description>
    <label>Vehicle Year</label>
    <length>5</length>
    <type>Text</type>
</CustomField>