unpackaged/main/default/objects/Case/fields/Acting_Agent__c.field-meta.xml
<CustomField>
    <fullName>Acting_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acting Agent</label>
    <type>Checkbox</type>
</CustomField>