unpackaged/main/default/objects/Case/fields/Acting_Agent_Details__c.field-meta.xml
<CustomField>
    <fullName>Acting_Agent_Details__c</fullName>
    <label>Acting Agent Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>