unpackaged/main/default/objects/Case/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allow Call</fullName>
            </value>
            <value>
                <fullName>Escalation Protocol</fullName>
            </value>
            <value>
                <fullName>No Action</fullName>
            </value>
            <value>
                <fullName>Route CSR</fullName>
            </value>
            <value>
                <fullName>Route ERS Admin</fullName>
            </value>
            <value>
                <fullName>Route SIU</fullName>
            </value>
            <value>
                <fullName>Route to Operations</fullName>
            </value>
            <value>
                <fullName>Submit Reimbursement</fullName>
            </value>
            <value>
                <fullName>Training Protocol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>