unpackaged/main/default/objects/Case/fields/Additional_Vehicle_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Vehicle_Information__c</fullName>
    <label>Additional Vehicle Information</label>
    <type>TextArea</type>
</CustomField>