unpackaged/main/default/objects/Case/fields/Allotted_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Allotted_Mileage__c</fullName>
    <label>Allotted Mileage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>