unpackaged/main/default/objects/Case/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>