unpackaged/main/default/objects/Case/fields/Approved_Garage__c.field-meta.xml
<CustomField>
    <fullName>Approved_Garage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Garage</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Approved Garage)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>