unpackaged/main/default/objects/Case/fields/Approved_Garage_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Garage_Type__c</fullName>
    <formula>TEXT(  Approved_Garage__r.Approved_Garage_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Garage Type</label>
    <type>Text</type>
</CustomField>