unpackaged/main/default/objects/Case/fields/Arrival_Window_Case__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_Case__c</fullName>
    <label>Arrival Window Start</label>
    <type>DateTime</type>
</CustomField>