unpackaged/main/default/objects/Case/fields/Arrival_Window_Null__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_Null__c</fullName>
    <formula>ISNULL( Arrival_Window_Case__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Arrival Window Null</label>
    <type>Checkbox</type>
</CustomField>