unpackaged/main/default/objects/Case/fields/Benefit_Level__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Level__c</fullName>
    <formula>IF(
    Impairment_COD_Payment__c = TRUE,
    &quot;Basic&quot;,
    TEXT(Account.AAA_Membership_Level__c)
)</formula>
    <label>Benefit Level</label>
    <type>Text</type>
</CustomField>