unpackaged/main/default/objects/Case/fields/Breakdown_Address__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Address__c</fullName>
    <formula>FSL_Work_Order__r.Street + &quot; &quot; + FSL_Work_Order__r.City + &quot; &quot; + FSL_Work_Order__r.State</formula>
    <label>Breakdown Address</label>
    <type>Text</type>
</CustomField>