unpackaged/main/default/objects/Case/fields/Breakdown_Location__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Location__c</fullName>
    <label>Breakdown Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>