unpackaged/main/default/objects/Case/fields/Bypass_Priority_Update__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Priority_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Priority Update</label>
    <type>Checkbox</type>
</CustomField>