unpackaged/main/default/objects/Case/fields/Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Date__c</fullName>
    <formula>DATEVALUE( FSL_Work_Order__r.Dispatched_Timestamp__c )</formula>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>