unpackaged/main/default/objects/Case/fields/Call_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Call_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Opt In</label>
    <type>Checkbox</type>
</CustomField>