unpackaged/main/default/objects/Case/fields/Call_Source__c.field-meta.xml
<CustomField>
    <fullName>Call_Source__c</fullName>
    <label>Call Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Call_Source</valueSetName>
    </valueSet>
</CustomField>