unpackaged/main/default/objects/Case/fields/Case_Cancel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancel_Comments__c</fullName>
    <inlineHelpText>Please enter a brief comment to explain the cancellation.</inlineHelpText>
    <label>Case Cancel Comments</label>
    <type>TextArea</type>
</CustomField>