unpackaged/main/default/objects/Case/fields/Case_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancel_Reason__c</fullName>
    <label>Case Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member will call back when ready for service</fullName>
            </value>
            <value>
                <fullName>Service requested is not covered - policy exception denied</fullName>
            </value>
            <value>
                <fullName>No service needed (General Inquiry)</fullName>
            </value>
            <value>
                <fullName>Referral request to commercial service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>