unpackaged/main/default/objects/Case/fields/Case_Membership__c.field-meta.xml
<CustomField>
    <fullName>Case_Membership__c</fullName>
    <label>Case Membership #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>