unpackaged/main/default/objects/Case/fields/Case_Priority_Override__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Priority Override</label>
    <type>Checkbox</type>
</CustomField>