unpackaged/main/default/objects/Case/fields/Case_Priority_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Override_Reason__c</fullName>
    <label>Case Priority Override Reason</label>
    <type>TextArea</type>
</CustomField>