unpackaged/main/default/objects/Case/fields/Case_Region__c.field-meta.xml
<CustomField>
    <fullName>Case_Region__c</fullName>
    <label>Case Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Region</valueSetName>
    </valueSet>
</CustomField>