unpackaged/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Called ICS - Status Update Pending</fullName>
            </value>
            <value>
                <fullName>Called Mbr - Updated ETA Provided</fullName>
            </value>
            <value>
                <fullName>Scheduled to Driver</fullName>
            </value>
            <value>
                <fullName>Status Updated</fullName>
            </value>
            <value>
                <fullName>Dispatched to ICS</fullName>
            </value>
            <value>
                <fullName>Call cleared</fullName>
            </value>
            <value>
                <fullName>Violation Case Auto Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>