unpackaged/main/default/objects/Case/fields/Cash_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Cash_Indicator__c</fullName>
    <formula>IF(FSL_Work_Order__r.Payment_Required__c = true,
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) &amp; &quot;resource/FSLCODDollarBill&quot;, &quot;COD&quot;),
IMAGE(&quot;/s.gif&quot;, &quot;No Payment Required&quot;))</formula>
    <label>Cash Indicator</label>
    <type>Text</type>
</CustomField>