unpackaged/main/default/objects/Case/fields/CDX_Active__c.field-meta.xml
<CustomField>
    <fullName>CDX_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>