unpackaged/main/default/objects/Case/fields/CDX_Authorization_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>CDX_Authorization_TransactionId__c</fullName>
    <label>CDX Authorization TransactionId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>