unpackaged/main/default/objects/Case/fields/CDX_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>CDX_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDX Entitlement</label>
    <type>Checkbox</type>
</CustomField>