unpackaged/main/default/objects/Case/fields/CDX_Expiration__c.field-meta.xml
<CustomField>
    <fullName>CDX_Expiration__c</fullName>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>