unpackaged/main/default/objects/Case/fields/CDX_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>CDX_Home_Address__c</fullName>
    <label>Home Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>