unpackaged/main/default/objects/Case/fields/CDX_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>CDX_Membership_Status__c</fullName>
    <label>CDX Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <label>Active (A)</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>Pending (P)</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>Cancelled (C)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>