unpackaged/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARR</fullName>
            </value>
            <value>
                <fullName>DRR</fullName>
            </value>
            <value>
                <fullName>ACG DRR</fullName>
            </value>
            <value>
                <fullName>SAIVR</fullName>
            </value>
            <value>
                <fullName>CTI DRR</fullName>
            </value>
            <value>
                <fullName>CHATBOT</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>