unpackaged/main/default/objects/Case/fields/ClonedParent__c.field-meta.xml
<CustomField>
    <fullName>ClonedParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case used as the parent when this item was cloned.</description>
    <label>Cloned/Duplicate Parent</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Cloned/Duplicate Parent)</relationshipLabel>
    <relationshipName>ClonedParent</relationshipName>
    <type>Lookup</type>
</CustomField>